Fixes styling of nav button in mobile and overflow issue with footer

--- a/src/components/IconButton/IconButton.scss
+++ b/src/components/IconButton/IconButton.scss
@@ -60,3 +60,10 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .icon-btn-wrapper {
+    height: 3rem;
+    width: 3rem;
+  }
+}
