--- a/src/index.scss
+++ b/src/index.scss
@@ -47,7 +47,6 @@ body {
   background-color: white;
   line-height: 1.5;
   overflow-x: hidden;
-  max-height: 100vh;
 }
 
 main {
