--- a/src/shared/Footer/Footer.scss
+++ b/src/shared/Footer/Footer.scss
@@ -2,6 +2,7 @@ footer {
   background-color: white;
   border-radius: 3rem 3rem 0 0;
   padding-top: 4.5rem;
+  overflow: hidden;
 
   .footer-body {
     display: flex;
@@ -30,15 +31,15 @@ footer {
           align-items: center;
 
           .logo {
-            width: 3.75rem;
-            height: 3.75rem;
+            width: 2.5rem;
+            height: 2.5rem;
             margin-right: 1rem;
           }
 
           .brand-name {
-            font-weight: bold;
-            font-size: 2.25rem;
+            font-size: 1.75rem;
             font-family: "Bebas Neue", sans-serif;
+            margin-top: 0.25rem;
           }
         }
 
@@ -63,7 +64,7 @@ footer {
       .sitemap {
         display: flex;
         width: 30rem;
-        padding-top: 0.9rem;
+        padding-top: 0.8rem;
 
         .links-wrapper {
           display: flex;
