--- a/src/shared/Navbar/Navbar.scss
+++ b/src/shared/Navbar/Navbar.scss
@@ -123,5 +123,12 @@
   }
 
   .more-btn {
+    height: 25px;
+    width: 25px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
